# ROS2_Investigation

./: README.md  ROS2_Investigation.tex  ik_solver.sh  latex_build.sh  launch_MRM.sh
src/ROS2_MRM/: package.xml  setup.cfg  setup.py
src/ROS2_MRM/launch/: robot_description.launch.py
src/ROS2_MRM/rviz/: robot_config.rviz
src/ROS2_MRM/urdf/: mill_relining_robot.urdf.xacro
src/moveit_config/: .setup_assistant  package.xml
src/moveit_config/config/: joint_limits.yaml  kinematics.yaml  mill_relining_robot.ros2_control.xacro  mill_relining_robot.srdf  mill_relining_robot.urdf.xacro  moveit_controllers.yaml  ompl_planning.yaml  planning_pipeline.yaml
src/moveit_config/launch/: demo.launch.py
